fix soon timeline margin on mobile

--- a/themes/editorial/css/main.css
+++ b/themes/editorial/css/main.css
@@ -1604,7 +1604,7 @@ table.plan td {
   height: calc(100% - 40px);
   float: left;
   left: 46px;
-  margin-top: 2.8em;
+  margin-top: 56px;
   position: absolute; }
 
 /****************
