--- a/themes/editorial/sass/custom.scss
+++ b/themes/editorial/sass/custom.scss
@@ -127,7 +127,7 @@ table.plan td {
     height: calc(100% - 40px);
     float: left;
     left: 46px;
-    margin-top: 2.8em;
+    margin-top: 56px;
     position: absolute;
 }
 
